Fixes nav icon on mobile resolutions

--- a/app/styles/components/_header.scss
+++ b/app/styles/components/_header.scss
@@ -59,4 +59,7 @@ header{
   header .logo{
     width: 230px;
   }
+  .nav-icon{
+    margin: 38px 0;
+  }
 }
